--- a/Boxes.html
+++ b/Boxes.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Cajas de pasteleria artesanal para desayunos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/estilos.css">
-    <title>Desayunos y boxes</title>
+    <title>Frola | Desayunos y boxes</title>
     
   </head>
   <body>
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html" id="navbar-logo">
+        <a class="navbar-brand" href="./index.html" id="navbar--logo">
           <img src="./Imagenes/Logo.png" alt="Logo" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,74 +22,107 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbar--dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Productos
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu" aria-labelledby="navbar--dropdown">
                 <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
                 <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
-                <li><a class="dropdown-item" href="#">Desayunos y boxes</a></li>
+                <li><a class="dropdown-item" id="navbar--link--seleccionado" href="#">Desayunos y boxes</a></li>
               </ul>
             </li>
-            <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
-            <a class="nav-link" id="navbar-link" href="./Info.html">Informacion</a>
-            <a class="nav-link" id="navbar-link" href="./Contacto.html">Contacto</a>
+            <a class="nav-link" id="navbar--link" href="./Galeria.html">Galeria</a>
+            <a class="nav-link" id="navbar--link" href="./Info.html">Informacion</a>
+            <a class="nav-link" id="navbar--link" href="./Contacto.html">Contacto</a>
           </div>
         </div>
       </div>
     </nav>
+    <!--Termina Navbar-->
+
     <div class="display-3 text-center mt-5 mb-5" id="titulo">Desayunos y boxes</div>
+
     <!--Productos Boxes-->
     <div class="mb-5">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-xl-2 g-4 me-5 ms-5">
-        <div class="col" id="producto">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-xl-2 g-4 me-5 ms-5" id="productos">
+        <div class="col" id="productos--item">
           <div class="card">
-            <div id="fondo-producto"></div>
+            <div id="productos--fondo"></div>
             <img src="./Imagenes/Pasteleria/Box1.jpg" class="card-img-top" alt="Box de desayuno grande">
             <div class="card-body">
               <h5 class="nombre card-title">Box grande</h5>
               <p class="precio card-text secondary">$9999,99</p>
-              <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
+              <p class="descripcion card-text">
+                <ul>
+                  <li>1 cuadrado de coco y ddl</li>
+                  <li>2 brownie</li>
+                  <li>1 alfajor marplatense</li>
+                  <li>1 alfajor de maicena</li>
+                  <li>1 scon de queso</li>
+                  <li>chipa</li>
+                  <li>2 cookies</li>
+                  <li>1 porcion de torta a eleccion</li>
+                  <li>4 te</li>
+                  <li>2 barras de submarino</li>
+                </ul>
+              </p>
+              <button type="button" class="btn" onclick="alert('Sin stock')" id="productos--button">Comprar</button>
             </div>
           </div>
         </div>
-        <div class="col" id="producto">
+        <div class="col" id="productos--item">
           <div class="card">
-            <div id="fondo-producto"></div>
+            <div id="productos--fondo"></div>
             <img src="./Imagenes/Pasteleria/Box2.jpg" class="card-img-top" alt="Box de desayuno chica">
             <div class="card-body">
               <h5 class="nombre card-title">Box chica</h5>
               <p class="precio card-text secondary">$9999,99</p>
-              <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
+              <p class="descripcion card-text"><ul>
+                <li>1 cuadrado coco y ddl</li>
+                <li>1 brownie</li>
+                <li>1 alfajor marplatense</li>
+                <li>1 scon de queso</li>
+                <li>1 cookie</li>
+                <li>1 te</li>
+                <li>1 barra de submarino</li>
+              </ul></p>
+              <button type="button" class="btn" onclick="alert('Sin stock')" id="productos--button">Comprar</button>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!--Terminan productos-->
+
     <!--wpp-->
     <div>
       <a href="https://web.whatsapp.com/" target="_blank" id="wpp">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 64 64" style=" fill:#000000;"><path fill="#97e0bb" d="M3,32A29,29,0,1,1,16,56.2C13,57,6,59,6,59A94.15,94.15,0,0,0,8.36,48.81,28.87,28.87,0,0,1,3,32Z"></path><path fill="#72caaf" d="M32 9A23 23 0 1 0 32 55A23 23 0 1 0 32 9Z"></path><path fill="#faefde" d="M24,18l3,8-2.68,4.21L32,37l4,3.09L40,36l8,3-2.16,6.33-6.4,1.74L27.81,42.42s-8.64-6.44-11-14c-1.31-4.08,1.74-8.72,1.74-8.72Z"></path><path fill="#8d6c9f" d="M46.95,37.52l-.42-.21s-4.41-2.2-5.25-2.49a2.43,2.43,0,0,0-3,.92l-.33.46a24.53,24.53,0,0,1-1.61,2.12.67.67,0,0,1-.71,0l-.24-.1a17.84,17.84,0,0,1-5.54-3.46,22.06,22.06,0,0,1-4-5c0-.07-.06-.12-.06-.12a2.31,2.31,0,0,1,.28-.36c.2-.25.39-.45.59-.66s.34-.36.51-.56l.08-.09a5,5,0,0,0,.89-1.29A2.53,2.53,0,0,0,28,24.47c-.12-.25-1-2.46-1.63-3.92l-.67-1.62h0c-.64-1.54-1.35-1.84-2.5-1.89-.28,0-.58,0-.93,0a4.71,4.71,0,0,0-3.42,1.29A9.2,9.2,0,0,0,16,25.22c0,3.41,2,6.69,3.27,8.4l.13.19c3.77,5.46,8.44,9.55,13.15,11.5C36.74,47,39,47.5,40.52,47.5a7.86,7.86,0,0,0,1.7-.19c2.25-.49,5.05-2.15,5.81-4.29.63-1.78.79-3.68.37-4.42A2.92,2.92,0,0,0,46.95,37.52Zm-.81,4.83c-.47,1.34-2.63,2.63-4.34,3-1,.22-2.58.55-8.46-1.89C29,41.66,24.62,37.82,21.07,32.67l-.21-.3C19.79,30.92,18,28.06,18,25.22a7.31,7.31,0,0,1,2.36-5.59A2.79,2.79,0,0,1,22.3,19c.3,0,.56,0,.83,0a2.42,2.42,0,0,1,.41,0,1.67,1.67,0,0,1,.35.62l.67,1.62c.9,2.18,1.54,3.74,1.68,4s.16.42.1.54a3.21,3.21,0,0,1-.61.86l-.08.09c-.15.18-.3.33-.45.49s-.46.49-.69.78a2.19,2.19,0,0,0-.39,2.75,23.71,23.71,0,0,0,4.39,5.45,20,20,0,0,0,6.12,3.82l.22.09a2.61,2.61,0,0,0,2.94-.53,25.38,25.38,0,0,0,1.78-2.32l.33-.46c.21-.29.35-.33.71-.2.56.2,3.78,1.77,5,2.4l.45.22.54.25A7.32,7.32,0,0,1,46.14,42.35Z"></path><path fill="#8d6c9f" d="M32.06,2H32A30,30,0,0,0,2,32,29.66,29.66,0,0,0,7.41,49.16L4,59.45a1,1,0,0,0,1.25,1.27l10.7-3.42A30,30,0,1,0,32.06,2ZM32,60a27.82,27.82,0,0,1-15.4-4.62,1,1,0,0,0-.55-.17,1,1,0,0,0-.3,0l-9.27,3,3-8.9a1,1,0,0,0-.14-.91A27.69,27.69,0,0,1,4,32,28,28,0,0,1,32,4h0a28,28,0,0,1,0,56Z"></path><path fill="#8d6c9f" d="M47.37 13.2a1 1 0 0 0-1.25 1.56 21.46 21.46 0 0 1 1.77 1.59 1 1 0 0 0 1.42-1.41A23.7 23.7 0 0 0 47.37 13.2zM26.93 10.65a21.72 21.72 0 0 1 12.38.4 22 22 0 0 1 3 1.26 1 1 0 0 0 .45.11 1 1 0 0 0 .45-1.89 24 24 0 0 0-3.29-1.37 23.67 23.67 0 0 0-13.52-.44 1 1 0 1 0 .51 1.93zM14.57 41.82a1 1 0 0 0-1.34-.45l-1.85.93a1 1 0 0 0 .9 1.79l1.85-.93A1 1 0 0 0 14.57 41.82zM16 45.88l-1.55 1.38a1 1 0 1 0 1.33 1.49l1.55-1.38A1 1 0 1 0 16 45.88zM11.51 33h.06a1 1 0 0 0 .06-2l-2.07-.12a1 1 0 0 0-.12 2zM21.17 49.25a1 1 0 0 0-1.39.29l-1.14 1.73a1 1 0 1 0 1.67 1.1l1.14-1.73A1 1 0 0 0 21.17 49.25zM12.93 37.08a1 1 0 0 0-1.18-.78l-2 .42a1 1 0 0 0 .2 2l.2 0 2-.42A1 1 0 0 0 12.93 37.08z"></path></svg>
       </a>
     </div>
-    <div>
+    <!--Termina wpp-->
+
+    <!--Prefooter-->
+    <div id="prefooter">
       <hr>
-      <div class="row row-col-3 col-md-10">
+      <div class="row row-col-3 col-md-10 mb-5 mt-5" >
         <div class="col offset-md-2">
-          <div class="text-center fs-5 fw-bold">Enviamos tu compra</div>
-          <div class="text-center fs-6 text-muted">Entregas a todo el pais</div>
+          <div id="prefooter--title">Enviamos tu compra</div>
+          <div id="prefooter--description">Entregas en Vicente Lopez</div>
         </div>
         <div class="col">
-          <div class="text-center fs-5 fw-bold">Paga como quieras</div>
-          <div class="text-center fs-6 text-muted">Tarjetas de credito o debito</div>
+          <div id="prefooter--title">Paga como quieras</div>
+          <div id="prefooter--description">Por mercadopago o efectivo</div>
         </div>
         <div class="col">
-          <div class="text-center fs-5 fw-bold">10% de descuento</div>
-          <div class="text-center fs-6 text-muted">Abonando en efectivo</div>
+          <div id="prefooter--title">10% de descuento</div>
+          <div id="prefooter--description">Abonando en efectivo</div>
         </div>
       </div>
       <hr>
     </div>
+    <!--Termina prefooter-->
+
     <!--FOOTER-->
     <footer class="footer mt-auto py-3 "  id="footer">
       <div class="container">
@@ -122,7 +155,7 @@
       </span>
       </div>
     </footer>
-
+    <!--Termina footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
